# frill

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
samples/: frill.json  inc.glsl  test.ext.vert  test.frag  test.vert
samples/dir_1/: frill.json  test2.vert
samples/include/: inc.glsl
samples/添加/: inc.glsl
src/: CMakeLists.txt  archive.cpp  archive.hpp  config.h  main.cpp  main.rs  package.cpp  package.hpp  target.cpp  target.hpp
src/detail/: target_id.hpp
src/lib/frill/: CMakeLists.txt  archive.cpp  archive.hpp
src/lib/frill/misc/: CMakeLists.txt  fs.cpp  fs.hpp  target_id.cpp  target_id.hpp  thread_pool.hpp
src/misc/: CMakeLists.txt  fs.cpp
src/tasks/: compile_glsl.rs  dump_spv_to_cpp.rs  frill.cpp  frill.h  mod.rs  pack_cpp.rs
